--- a/css/_vars.css
+++ b/css/_vars.css
@@ -12,4 +12,9 @@
 --gap: 20px;
 --container-width: 1280px;
 --container-offset: 15px;
+
+--main-trs: color 0.3s ease, border-color 0.3s ease, backgroud-color 0.3s ease;
+
+--outline: 2px dashed currentColor;
+--outline-offset: 2px;
 }
