--- a/css/blocks/_header.css
+++ b/css/blocks/_header.css
@@ -2,6 +2,7 @@
 
 }
 .header__top{
+    --container-width:1330px;
     padding: 24px 0px;
     background-color: var(--white);
 }
@@ -10,7 +11,7 @@
 }
 .header__top-container{
     align-items: center;
-    justify-content:space-around;
+    justify-content:space-between;
 }
 .header__container-bottom{
     align-items: center;
@@ -19,6 +20,7 @@
 .header__details{
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 47px;
 }
 .header__list{
@@ -26,11 +28,47 @@
     align-items: center;
     gap: 32px;
 }
+.header__item{
+    font-weight: 400;
+    font-size: 16px;
+    color: #726e8d;
+}
 .header__link{
     font-weight: 400;
     font-size: 16px;
     color: #726e8d;
     text-decoration: none;
+    transition: var(--main-trs);
+}
+.header__bottom{
+    padding: 20px 0;
+    background: var(--light-grey);
+}
+.header__link:focus{   
+}
+.header__link:focus-visible{
+    outline: var(--outline);
+}
+  @media(any-hover: hover){
+    .header__link:hover{
+        color: var(--primary);
+    }
+  }
+.header__link:active{
+    color: var(--dark-primary);
+}
+.nav__link:focus{   
+}
+.nav__link:focus-visible{
+    outline: var(--outline);
+}
+  @media(any-hover: hover){
+    .nav__link:hover{
+        color: var(--primary);
+    }
+  }
+.nav__link:active{
+    color: var(--dark-primary);
 }
 .header__buttons{
     display: flex;
@@ -41,4 +79,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    color:#2a254b;
+    transition: var(--main-trs);
+}
+.header__button svg path{
+    fill: currentColor;
 }
