--- a/css/main.css
+++ b/css/main.css
@@ -9,3 +9,4 @@
 @import url("blocks/_btn.css");
 @import url("blocks/_logo.css");
 @import url("blocks/_nav.css");
+@import url("blocks/_hero.css");
