--- a/css/blocks/_btn.css
+++ b/css/blocks/_btn.css
@@ -1,3 +1,15 @@
 .btn{
-    color: blue;
+    display: inline-flex;align-items: center;
+    justify-content: center;
+    padding: 16px 32px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 150%;
+    color: var(--white);
+    text-decoration: none;
+    transition: var(--main-trs);
+}
+.btn--theme-dark {
+    background: rgba(249, 249, 249, 0.15);
+    color: white;
 }
